--- a/lesson_activity/tutorial 17 css.css
+++ b/lesson_activity/tutorial 17 css.css
@@ -1,49 +1,2 @@
-/* styles.css */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #d5b2b2;
-    text-align: center;
-}
-
-h2 {
-    color: #333;
-}
-
-form {
-    width: 350px;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 5px rgba(0, 0, 0, 0.1);
-}
-
-label {
-    display: block;
-    margin-bottom: 7px;
-    color: #333;
-}
-
-input[type="text"],
-input[type="email"],
-textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-input[type="submit"] {
-    background-color: #007BFF;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover {
-    background-color: #0056b3;
-}
+table{border-collapse: collapse;}
+td{height:60px;}
