--- a/lesson_activity/tutorial 17 css.css
+++ b/lesson_activity/tutorial 17 css.css
@@ -1,3 +1,3 @@
-table {border: 1px solid;color:rgb(124, 124, 155);}
 table{border-collapse: collapse;}
-td{height:60px;}
+td{height:60px;
+  width:50px；}
