--- a/lesson_activity/style ass.css
+++ b/lesson_activity/style ass.css
@@ -17,6 +17,10 @@ header {
     padding: 20px;
 }
 
+a:hover {
+    background-color: rgb(163, 213, 178);
+}
+
 nav ul {
     list-style: none;
 }
@@ -55,9 +59,14 @@ nav a {
     font-weight: bold;
 }
 
+button:hover {
+    background-color: rgb(220, 154, 220);
+}
+
 footer {
     text-align: center;
     padding: 10px;
     background-color: #333;
     color: #fff;
 }
+
