--- a/lesson_activity/ecomerce style.css
+++ b/lesson_activity/ecomerce style.css
@@ -1,4 +1,3 @@
-/* styles.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #f1f1f1;
@@ -27,6 +26,10 @@ nav a {
     color: #fff;
 }
 
+a:hover {
+    background-color: rgb(220, 154, 220);
+}
+
 main {
     display: flex;
     flex-wrap: wrap;
@@ -51,10 +54,6 @@ main {
     font-weight: bold;
 }
 
-button {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
+button:hover {
+    background-color: rgb(166, 159, 159);
 }
