--- a/lesson_activity/ecomerce style.css
+++ b/lesson_activity/ecomerce style.css
@@ -57,3 +57,10 @@ main {
 button:hover {
     background-color: rgb(166, 159, 159);
 }
+
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+}
